--- a/public/index.html
+++ b/public/index.html
@@ -12,29 +12,14 @@
 </body>
 <script type="text/javascript">
     $.ajax({
-        url: "/api/tpi",
-        data: {
-            from: new Date("2016-11-30 00:00").getTime(),
-            to: new Date().getTime()
-        }
-    }).then(results => {
-        var scatterChart = new Chart(document.getElementById("canvas"), {
-            type: 'line',
-            data: {
-                datasets: [{
-                    label: 'tpi',
-                    data: results.map((result,i) => ({ x:i, y:result }))
-                }]
-            },
-            options: {
-                scales: {
-                    xAxes: [{
-                        type: 'linear',
-                        position: 'bottom'
-                    }]
-                }
-            }
+        headers: {
+            "Accept": "text/csv; charset=utf-8",
+            "Content-Type": "text/plain; charset=utf-8"
+        },
+        url: "/api/blo/bus-line/00010-1",
+    }).then(result => {
+            // document.body.innerHTML = "<p>" + JSON.stringify(result) + "</p>";
+            document.body.innerHTML = result;
         });
-    });
 </script>
 </html>
